demo/web-load-balancer/cloudformation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",

    "Parameters": {
        "WebNodes": {
            "Type": "String",
            "Default": "5",
            "Description": "Number of web servers to launch."
        }
    },

    "Outputs": {
        "LoadBalancerIP": {
            "Value": { "Ref": "LoadBalancerIP" }
        }
    },

    "Resources": {
        "Gateway": {
            "Type": "AWS::EC2::InternetGateway"
        },

        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": true
            }
        },

        "VPCGateway": {
            "Type" : "AWS::EC2::VPCGatewayAttachment",
            "Properties" : {
                "InternetGatewayId" : { "Ref": "Gateway" },
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.1.0/24",
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PrivateSubnetRoute": {
            "Type" : "AWS::EC2::SubnetRouteTableAssociation",
            "Properties" : {
                "RouteTableId" : { "Ref": "PrivateRouteTable" },
                "SubnetId" : { "Ref": "PrivateSubnet" }
            }
        },

        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PrivateRouteGlobal": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "PrivateRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "InstanceId" : { "Ref" : "NATDevice" }
            },
            "DependsOn": "PublicRouteGlobal"
        },

        "PublicSubnetRoute": {
            "Type" : "AWS::EC2::SubnetRouteTableAssociation",
            "Properties" : {
                "RouteTableId" : { "Ref": "PublicRouteTable" },
                "SubnetId" : { "Ref": "PublicSubnet" }
            }
        },

        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PublicRouteGlobal": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": { "Ref": "Gateway" }
            }
        },

        "NATIPAddress": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc",
                "InstanceId": { "Ref": "NATDevice" }
            },
            "DependsOn": "VPCGateway"
        },

        "NATDevice" : {
            "Type" : "AWS::EC2::Instance",
            "Properties" : {
                "SubnetId" : { "Ref" : "PublicSubnet" },
                "SourceDestCheck" : "false",
                "ImageId" : "ami-c6699baf",
                "SecurityGroupIds" : [
                    { "Ref" : "InstanceSecurityGroup" }
                ],
                "Tags": [
                    { "Key": "Name", "Value": "Serf Demo NAT Device" }
                ]
            }
        },

        "LoadBalancer": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "KeyName": "hashicorp-basic",
                "ImageId": "ami-ad3660c4",
                "PrivateIpAddress": "10.0.0.5",
                "SecurityGroupIds": [
                    {"Ref": "InstanceSecurityGroup"}
                ],
                "SubnetId": { "Ref": "PublicSubnet" },
                "Tags": [
                    { "Key": "Name", "Value": "Serf Demo LB" }
                ],
                "UserData": "IyEvYmluL2Jhc2gKTk9ERV9TRVRVUF9VUkw9Imh0dHBzOi8vcmF3LmdpdGh1Yi5jb20vaGFzaGljb3JwL3NlcmYvbWFzdGVyL2RlbW8vc2V0dXBfbG9hZF9iYWxhbmNlci5zaD9sb2dpbj1taXRjaGVsbGgmdG9rZW49NmRjZjBiY2M3OTNjYTQzN2RhNmQ3Nzc0NmZiODEwYjciCgpTRVJGX1NFVFVQX1VSTD0iaHR0cHM6Ly9yYXcuZ2l0aHViLmNvbS9oYXNoaWNvcnAvc2VyZi9tYXN0ZXIvZGVtby9zZXR1cF9zZXJmLnNoP2xvZ2luPW1pdGNoZWxsaCZ0b2tlbj0wOWFmODY0ZjJiZGZlZjRlYmRkOTI0NWEwMjE3Nzk5MSIKCiMgU2V0dXAgdGhlIG5vZGUgaXRzZWxmCndnZXQgLU8gLSAkTk9ERV9TRVRVUF9VUkwgfCBiYXNoCgo [...]
            },
            "DependsOn": "PublicRouteGlobal"
        },

        "LoadBalancerIP": {
            "Type" : "AWS::EC2::EIP",
            "Properties" : {
                "InstanceId" : { "Ref": "LoadBalancer" },
                "Domain" : "vpc"
            },
            "DependsOn": "VPCGateway"
        },

        "WebGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "AvailabilityZones": [
                    { "Fn::GetAtt" : [ "PrivateSubnet", "AvailabilityZone" ] }
                ],
                "LaunchConfigurationName": { "Ref": "WebLaunchConfig" },
                "DesiredCapacity": { "Ref": "WebNodes" },
                "MinSize": { "Ref": "WebNodes" },
                "MaxSize": { "Ref": "WebNodes" },
                "VPCZoneIdentifier": [
                    { "Ref": "PrivateSubnet" }
                ]
            },
            "DependsOn": ["NATDevice", "NATIPAddress", "PrivateRouteGlobal"]
        },

        "WebLaunchConfig": {
            "Type": "AWS::AutoScaling::LaunchConfiguration",
            "Properties": {
                "KeyName": "hashicorp-basic",
                "ImageId": "ami-ad3660c4",
                "InstanceType": "m1.small",
                "SecurityGroups": [
                    {"Ref": "InstanceSecurityGroup"}
                ],
                "UserData": "IyEvYmluL2Jhc2gKTk9ERV9TRVRVUF9VUkw9Imh0dHBzOi8vcmF3LmdpdGh1Yi5jb20vaGFzaGljb3JwL3NlcmYvbWFzdGVyL2RlbW8vc2V0dXBfd2ViX3NlcnZlci5zaD9sb2dpbj1taXRjaGVsbGgmdG9rZW49ODk0YjY5ZjgzMzUyMmE4ZDNjMzM1YzQwYWM5OWZhNmQiCgpTRVJGX1NFVFVQX1VSTD0iaHR0cHM6Ly9yYXcuZ2l0aHViLmNvbS9oYXNoaWNvcnAvc2VyZi9tYXN0ZXIvZGVtby9zZXR1cF9zZXJmLnNoP2xvZ2luPW1pdGNoZWxsaCZ0b2tlbj0wOWFmODY0ZjJiZGZlZjRlYmRkOTI0NWEwMjE3Nzk5MSIKCiMgU2V0dXAgdGhlIG5vZGUgaXRzZWxmCndnZXQgLU8gLSAkTk9ERV9TRVRVUF9VUkwgfCBiYXNoCgojIFN [...]
            }
        },

        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Serf demo security group",
                "VpcId": { "Ref": "VPC" },
                "SecurityGroupIngress": [{
                    "IpProtocol": "icmp",
                    "FromPort": "-1",
                    "ToPort": "-1",
                    "CidrIp": "0.0.0.0/0"
                }, {
                    "IpProtocol": "tcp",
                    "FromPort": "22",
                    "ToPort": "22",
                    "CidrIp": "0.0.0.0/0"
                }, {
                    "IpProtocol": "tcp",
                    "FromPort": "80",
                    "ToPort": "80",
                    "CidrIp": "0.0.0.0/0"
                }, {
                    "IpProtocol": "tcp",
                    "FromPort": "9999",
                    "ToPort": "9999",
                    "CidrIp": "0.0.0.0/0"
                }]
            }
        },

        "InstanceSecurityGroupSelfRule": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": { "Ref": "InstanceSecurityGroup" },
                "IpProtocol": "-1",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": { "Ref": "InstanceSecurityGroup" }
            }
        }
    }
}
